--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 body {
   user-select: none;
-  background-color: #8d8d8d;
+  background-color: #47867c;
 }
 
 #root {
@@ -16,11 +16,11 @@ body {
 }
 
 .inner-container {
-  outline: 5px solid orange;
+  outline: 5px solid black;
   position: relative;
   width: 660px;
   text-align: center;
-  background-color: #b3b3b3;
+  background-color: #7ba9a7;
 }
 .inner-container .pad-bank {
   width: 332px;
@@ -66,7 +66,7 @@ body {
 }
 .inner-container .controls-container #display {
   width: 200px;
-  background-color: gray;
+  background-color: rgb(119, 158, 155);
   margin: 15px auto;
   padding: 15px;
   box-sizing: border-box;
@@ -86,7 +86,7 @@ body {
 .inner-container .controls-container .control .select .inner {
   width: 23px;
   height: 19px;
-  background: blue;
+  background: white;
   border: 1px solid black;
   box-sizing: border-box;
   cursor: pointer;
@@ -121,7 +121,7 @@ body {
   height: 25px;
   width: 8px;
   border-radius: 0;
-  background: blue;
+  background: black;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -11px;
